--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,9 @@
     padding: 2%;
     width: 15%;
 }
+body{
+  margin-top: 60px;
+}
 #modal-container{
   display: none;
 }
@@ -52,10 +55,11 @@
   background: none;
   color: #777;
   text-decoration: underline;
+  margin-top:60px;
 }
 
 .modal h1 {
-  margin-top: 0;
+  margin-top: 60px;
 }
 
 .modal p {
