--- a/css/styles.css
+++ b/css/styles.css
@@ -1,56 +1,16 @@
-.pokeClass{
-    color: #f5ccd4;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    border-color: #c9def4;
-    background-color: #764E7E;
-    text-align: center;
-    padding: 2%;
-    width: 15%;
+.pokemon-list {
+  list-style-type: none;
+  display: grid;
+}
+.list-group-item {
+  background-color: #f5ccd4;
+  border: none
+}
+.btn {
+  color: #764E7E;
+  background-color: #c9def4;
+  width: 100%
 }
 body{
   margin-top: 60px;
-}
-#modal-container{
-  display: none;
-}
-#modal-container.is-visible {
-  position: fixed;
-  padding: 20px;
-  box-sizing: border-box;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  
-  /* to show it above other content */
-  z-index: 999; 
-  
-  /* to allow scrolling if the screen is not high enough*/
-  overflow: auto; 
-  
-  /* this is used to center the modal */
-  display: grid;
-  text-align: center;
-}
-#show-modal{
-  display: none;
-}
-
-.modal-close {
-  float: right;
-  -webkit-appearance: none;
-  border: 0;
-  background: none;
-  color: #777;
-  text-decoration: underline;
-  margin-top:auto;
-}
-
-.modal h1 {
-  margin-top: 60px;
-}
-
-.modal p {
-  margin-bottom: 0;
 }
