--- a/css/styles.css
+++ b/css/styles.css
@@ -4,16 +4,21 @@
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: auto;
   border-style: none;
-  background: #f5ccd4;
+  background: #E1D7C6;
+}
+.navbar{
+  background-color: #F8F4EA;
+  border: 3px solid #F8F4EA;
 }
 .list-group-item {
-  background-color: #f5ccd4;
-  border: none
+  background-color: #579BB1;
+  border: none;
 }
 .btn {
-  color: #764E7E;
-  background-color: #c9def4;
-  width: 100%
+  color: black;
+  background-color: #E1D7C6;
+  width: 100%;
+  border: 2px solid black;
 }
 body{
   margin-top: 60px;
